0.2 (unreleased)
================

- Added support for extra-paths (additional Python paths)


0.1 (2012-12-01)
================

- Initial implementation.
  [marciomazza]